--- a/index.html
+++ b/index.html
@@ -393,7 +393,8 @@
             <div class="line"></div>
           </div>
          <div class="car-container">
-             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+             <div class="car-container-inner">
+                 <div class="carousel slide" data-ride="carousel">
   
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -427,6 +428,12 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
+             </div>
+             
+<br />
+<br />
+<br />
+<br />
          </div>
         </div>
         <div class="title">FAQ</div>
@@ -442,6 +449,7 @@
 
 
 
+      
       <div class="main-wrap">
         <div
           class="content rellax"
