--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
          />
    </head>
    <body>
+      
       <lines>
          <div class="wrap"></div>
          <div class="wrap"></div>
@@ -85,7 +86,9 @@
                   <p>ADVANCES IN BIOSCIENCES AND BIOTECHNOLOGY</p>
                   <p>2021</p>
                </div>
-               <a href="#"><button>REGISTRATION OPENING SOON</button></a>
+               <a href="registration.html"><button>REGISTER</button></a>
+               <a href="guidelines.html"><button>GUIDELINES</button></a>
+               <a href="ICABB-2021-Brochure.pdf" target="_blank"><button>VIEW BROCHURE</button></a>
                <p class="power" href="#sponsors">
                   28<sup>th</sup> January - 30<sup>th</sup> January 2021
                </p>
@@ -128,7 +131,7 @@
                   Virtual.<br />
                   <i class="fa fa-dot-circle-o" style="margin-left: 20px"></i>
                   Speakers from around the globe.<br />
-                  <a href="#" target="_blank">Know more</a>
+                  <a href="about.html"><button>Know more</button></a>
                </div>
                <div>
                   <ul class="timeline">
@@ -410,7 +413,7 @@
                   <br />
                </div>
             </div>
-            <div class="title">FAQ</div>
+            <div class="title">PAST EVENTS</div>
             <div
                class="shape shape-4 rellax"
                data-rellax-speed="5"
@@ -419,7 +422,7 @@
                <img src="img/blue/blueShapeSide.png" />
             </div>
          </div>
-         <div class="main-wrap">
+         <!-- <div class="main-wrap">
             <div
                class="content rellax"
                data-rellax-speed="-4"
@@ -491,7 +494,7 @@
                >
                <img src="img/blue/blueShapeSide.png" />
             </div>
-         </div>
+         </div> -->
          <footer>
             <img src="img/cloud.png" />
             <div class="footer">
