--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <!-- for Facebook -->
       <meta property="og:title" content="JIIT ICABB 2021" />
       <meta property="og:type" content="website" />
-      <meta property="og:image" content="https://icabbjiit.com/assets/meta_img.png" />
+      <meta property="og:image:secure" content="https://icabbjiit.com/assets/meta_img.png" />
       <meta property="og:url" content="https://icabbjiit.com/" />
       <meta
          property="og:description"
