--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                   <p>ADVANCES IN BIOSCIENCES AND BIOTECHNOLOGY</p>
                   <p>2021</p>
                </div>
-               <a href="registration.html"><button>REGISTER</button></a>
-               <a href="guidelines.html"><button>GUIDELINES</button></a>
+               <a href="registration"><button>REGISTER</button></a>
+               <a href="guidelines"><button>GUIDELINES</button></a>
                <a href="ICABB-2021-Brochure.pdf" target="_blank"><button>VIEW BROCHURE</button></a>
                <p class="power" href="#sponsors">
                   28<sup>th</sup> January - 30<sup>th</sup> January 2021
@@ -130,7 +130,7 @@
                   Virtual.<br />
                   <i class="fa fa-dot-circle-o" style="margin-left: 20px"></i>
                   Speakers from around the globe.<br />
-                  <a href="about.html"><button>Know more</button></a>
+                  <a href="about"><button>Know more</button></a>
                </div>
                <div>
                   <ul class="timeline">
