--- a/registration.html
+++ b/registration.html
@@ -30,7 +30,7 @@
 
 <body>
     <nav class="navbar navbar-light bg-transparent">
-        <a class="navbar-brand" href="index.html"><i class="fa fa-chevron-left" style="margin-right: 10px;"
+        <a class="navbar-brand" href="/"><i class="fa fa-chevron-left" style="margin-right: 10px;"
                 aria-hidden="true"></i>ICABB JIIT 2021</a>
     </nav>
     <lines>
@@ -79,7 +79,7 @@
                         </div>
                     </div>
                     <div class="container d-flex align-items-center justify-content-center" style="margin-top: 30px;">
-                        <a target="_blank" href="registration-fees.html"><button>PAYMENT DETAILS</button></a>
+                        <a href="registration-fees"><button>PAYMENT DETAILS</button></a>
                     </div>
                 </div>
 
