--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 
 <body>
     <nav class="navbar navbar-light bg-transparent">
-        <a class="navbar-brand" href="index.html"><i class="fa fa-chevron-left" style="margin-right: 10px;"
+        <a class="navbar-brand" href="index"><i class="fa fa-chevron-left" style="margin-right: 10px;"
                 aria-hidden="true"></i>ICABB JIIT 2021</a>
     </nav>
     <lines>
@@ -181,7 +181,7 @@
                                 <h5>SESSIONS</h5>
                             </div>
                         </div>
-                        <a href="register.html"><button>REGISTER NOW</button></a>
+                        <a href="registration"><button>REGISTER NOW</button></a>
                     </div>
 
                 </div>
