--- a/registration-fees.html
+++ b/registration-fees.html
@@ -30,7 +30,7 @@
 
 <body>
     <nav class="navbar navbar-light bg-transparent">
-        <a class="navbar-brand" href="index.html"><i class="fa fa-chevron-left" style="margin-right: 10px;"
+        <a class="navbar-brand" href="/"><i class="fa fa-chevron-left" style="margin-right: 10px;"
                 aria-hidden="true"></i>ICABB JIIT 2021</a>
     </nav>
     <lines>
