--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                   <a href="about"><button>Know more</button></a>
                </div>
                <div>
-                  <ul class="timeline">
+                  <!-- <ul class="timeline">
                      <li>
                         <div class="direction-r">
                            <div class="flag-wrapper">
@@ -166,7 +166,7 @@
                            </div>
                         </div>
                      </li>
-                  </ul>
+                  </ul> -->
                </div>
             </div>
             <div class="title">ABOUT</div>
@@ -314,7 +314,7 @@
                   <p>AND MORE</p>
                   <div class="line"></div>
                </div>
-               <div class="sponsors">
+               <!-- <div class="sponsors">
                   <div class="associate-sponsors">
                      <div class="spon-title p-1">Associate Sponsors</div>
                      <a href="#"
@@ -330,7 +330,7 @@
                         ><img class="sponsor-img" src="assets/sponsor4.png" alt=""
                         /></a>   
                   </div>
-               </div>
+               </div> -->
             </div>
             <div class="title">SPONSORS</div>
             <div class="collab">
