--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                </div>
                <div class="car-container">
                   <div class="car-container-inner">
-                     <div class="carousel slide" data-ride="carousel">
+                     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
                            <div class="carousel-item active">
                               <img src="assets/c1.jpeg" class="d-block w-100 car-img" alt="...">
