--- a/registration-fees.html
+++ b/registration-fees.html
@@ -148,7 +148,7 @@
                     <a href="mailto:dhamasunny98@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
                 </div>
                 <div class="credit">
-                    <a target="_blank" href="#" style="
+                    <a target="_blank" href="ICABB-2021-Brochure.pdf" style="
                 padding: 0 3px;
                 padding-bottom: 2px;
                 border-bottom: white 2px solid;
