--- a/about.html
+++ b/about.html
@@ -98,14 +98,17 @@
                     <div class="content-gray" style="margin-top: 40px;">
                         <h6 class="text-center" style="color: #145dbb;">OUR ORGANIZING TEAM
                         </h6>
-                        <h2>CONFERENCE ORGANIZERS</h2>
-                        <h3>PATRONS</h3>
+                        <h3>PATRON</h3>
                         <p>Shri Manoj Gaur Ji, Chancellor
                         </p>
-                        <p>Prof. S. C. Saxena, Honorable Vice Chancellor, JIIT, Noida
+                        <p>Prof. S. C. Saxena, Vice Chancellor, JIIT, Noida
                         </p>
 
-                        <h3>ORGANIZING SECRETARY</h3>
+                        <h3>CONFERENCE CHAIRPERSON</h3>
+                        <p>Prof. Pammi Gauba
+                        </p>
+
+                        <h3>CONFERENCE CONVENERS</h3>
                         <p>Prof. Reema Gabrani
                         </p>
                         <p>Dr. Garima Mathur
@@ -116,7 +119,9 @@
                         </p>
                         <p>Prof. D. K. Rai (Dean A&R, JIIT)
                         </p>
-                        <p>Dr. Amulya K. Panda (RKGIT, Ghaziabad)
+                        <p>Dr. Amulya K. Panda (NII, N. Delhi)
+                        </p>
+                        <p>Prof. Monika Sachdeva (RKGIT, Ghaziabad)
                         </p>
                         <p>Prof. Nilesh Sharma (Dr. D. Y. Patil Vidyapeeth, Pune)
                         </p>
@@ -128,13 +133,13 @@
                         <h3>TECHNICAL COMMITTEE</h3>
                         <p>Prof. Neeraj Wadhwa
                         </p>
-                        <p>Prof. S. Krishna Sundari
+                        <p>Prof. S.K. Sundari
                         </p>
-                        <p>Prof. Sujata Mohanty
+                        <p>Prof. S. Mohanty
                         </p>
-                        <p>Prof. Sudha Srivastava
+                        <p>Prof. S. Srivastava
                         </p>
-                        <p>Dr. Chakresh K Jain
+                        <p>Dr. C.K. Jain
                         </p>
                         <p>Dr. Manisha Singh
                         </p>
@@ -173,8 +178,8 @@
                                 <h5>SPEAKERS</h5>
                             </div>
                             <div class="col d-flex flex-column justify-content-center align-items-center">
-                                <h2 style="color: #145dbb;">10</h2>
-                                <h5>SPONSORS</h5>
+                                <h2 style="color: #145dbb;">5</h2>
+                                <h5>TRACKS</h5>
                             </div>
                             <div class="col d-flex flex-column justify-content-center align-items-center">
                                 <h2 style="color: #145dbb;">60</h2>
@@ -183,12 +188,7 @@
                         </div>
                         <a href="registration"><button>REGISTER NOW</button></a>
                     </div>
-
                 </div>
-
-
-
-
             </div>
         </div>
         <div class="title">ABOUT</div>
@@ -205,17 +205,9 @@
                             class="fa fa-facebook-square"></i></a>
                     <a href="https://www.instagram.com/icabb_2021/" target="_blank"><i class="fa fa-instagram"></i></a>
                     <a href="#" target="_blank"><i class="fa fa-twitter-square"></i></a>
-                    <a href="mailto:dhamasunny98@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
+                    <a href="mailto:reema.gabrani@jiit.ac.in" target="_blank"><i class="fa fa-envelope"></i></a>
                 </div>
                 <div class="credit">
-                    <a target="_blank"                      href="ICABB-2021-Brochure.pdf"
- style="
-                padding: 0 3px;
-                padding-bottom: 2px;
-                border-bottom: white 2px solid;
-                color: white;
-                text-decoration: none;
-              ">BROCHURE</a><br /><br />
                     <p>&copy ICABB JIIT 2021</p>
                     <div class="line"></div>
                     <p>
