--- a/registration-fees.html
+++ b/registration-fees.html
@@ -69,29 +69,29 @@
                             <tbody>
                                 <tr>
                                     <th scope="row">Students/Research Scholars</th>
-                                    <td>₹ 1000</td>
-                                    <td>$ 100</td>
+                                    <td style="text-align: center;">₹ 1000</td>
+                                    <td style="text-align: center;">$ 100</td>
                                 </tr>
                                 <tr>
                                     <th scope="row">Faculty/Scientists from Academia</th>
-                                    <td>₹ 2000</td>
-                                    <td>$ 200</td>
+                                    <td style="text-align: center;">₹ 2000</td>
+                                    <td style="text-align: center;">$ 200</td>
                                 </tr>
                                 <tr>
                                     <th scope="row">Participants from Industry</th>
-                                    <td>₹ 5000</td>
-                                    <td>$ 300</td>
+                                    <td style="text-align: center;">₹ 5000</td>
+                                    <td style="text-align: center;">$ 300</td>
                                 </tr>
                                 <tr>
                                     <th scope="row">Attendee Only</th>
-                                    <td>₹ 200</td>
-                                    <td>$ 50</td>
+                                    <td style="text-align: center;">₹ 200</td>
+                                    <td style="text-align: center;">$ 50</td>
                                 </tr>
                             </tbody>
                         </table>
                     </div>
                     <div class="container">
-                        <h2 class="text-center">PAYMENT METHODS</h2>
+                        <h2 class="text-center">PAYMENT METHOD</h2>
                         <p><u><b>For Online Transaction</b></u></p>
                         <p>The Participant/Author can pay the registration fee through Funds Transfer. The Funds
                             Transfer may be made to the following Bank</p>
@@ -105,23 +105,23 @@
                             <tbody>
                                 <tr>
                                     <th scope="row">Bank Name</th>
-                                    <td>ICICI BANK LTD</td>
+                                    <td style="text-align: center;">ICICI BANK LTD</td>
                                 </tr>
                                 <tr>
                                     <th scope="row">Account Type</th>
-                                    <td>Savings</td>
+                                    <td style="text-align: center;">Savings</td>
                                 </tr>
                                 <tr>
                                     <th scope="row">Account Number</th>
-                                    <td>JIITICABB20</td>
+                                    <td style="text-align: center;">JIITICABB20</td>
                                 </tr>
                                 <tr>
                                     <th scope="row">IFSC Code</th>
-                                    <td>ICIC0000104</td>
+                                    <td style="text-align: center;">ICIC0000104</td>
                                 </tr>
                             </tbody>
                         </table>
-                        <p class="text-center"><b>Please mention ICABB – 2021, “Your Name” and Abstract “reference
+                        <p class="text-center"><b style="color: #145dbb;">Please mention ICABB – 2021, “Your Name” and Abstract “reference
                                 number” in all communications.</b></p>
                     </div>
                 </div>
@@ -145,16 +145,10 @@
                             class="fa fa-facebook-square"></i></a>
                     <a href="https://www.instagram.com/icabb_2021/" target="_blank"><i class="fa fa-instagram"></i></a>
                     <a href="#" target="_blank"><i class="fa fa-twitter-square"></i></a>
-                    <a href="mailto:dhamasunny98@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
+                    <a href="mailto:reema.gabrani@jiit.ac.in" target="_blank"><i class="fa fa-envelope"></i></a>
                 </div>
                 <div class="credit">
-                    <a target="_blank" href="ICABB-2021-Brochure.pdf" style="
-                padding: 0 3px;
-                padding-bottom: 2px;
-                border-bottom: white 2px solid;
-                color: white;
-                text-decoration: none;
-              ">BROCHURE</a><br /><br />
+                    
                     <p>&copy ICABB JIIT 2021</p>
                     <div class="line"></div>
                     <p>
