--- a/registration.html
+++ b/registration.html
@@ -53,32 +53,33 @@
                     REGISTRATION
                 </h1>
                 <div class="head">
-                    <p>100+ REGISTRATIONS SO FAR.</p>
+                    <p></p>
                     <div class="line"></div>
                 </div>
                 <div class="container">
                     <h2 class="text-center">PRESENTEE</h2>
-                    <div class="content-gray">
-                        <ul class="ul-guidelines">
-                            <li>Email your abstract to jiiticabb2021@gmail.com</li>
-                            <li>You will receive an acceptance mail of abstract within two weeks with a specific
-                                Abstract ID (ICABB ID)</li>
-                            <li>Proceed with the payment</li>
-                        </ul>
-                        <a target="_blank" href="https://forms.gle/Y9ypBfzfrcGXMSTf6"><button>PRESENTEE REGISTRATION
-                                FORM</button></a>
-
+                    <div class="content-gray" style="display: block;">
+                        <p><b>STEP 1</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                            <a target="_blank" href="https://forms.gle/Y9ypBfzfrcGXMSTf6"><button>PRESENTEE REGISTRATION
+                                    FORM</button></a></p>
+                        <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                            Email your abstract to jiiticabb2021@gmail.com</p>
+                        <p><b>STEP 3</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> You will receive an acceptance mail of abstract within two weeks with a
+                            specific
+                            Abstract ID (ICABB ID)</p>
+                        <p><b>STEP 4</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> Proceed with the payment</p>
                     </div>
                     <h2 class="text-center">ATTENDEE</h2>
-                    <div class="content-gray">
-                        <p>Proceed with the payment</p>
-                        <div class="container d-flex align-items-center justify-content-center"
-                            style="margin-top: 30px;">
+                    <div class="content-gray" style="display: block;">
+                        <p><b>STEP 1</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
                             <a target="_blank" href="https://forms.gle/Y9ypBfzfrcGXMSTf6"><button>ATTENDEE REGISTRATION
-                                    FORM</button></a>
-                        </div>
+                                    FORM</button></a></p>
+                        <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                            You will receive an confirmation mail.</p>
+                        <p><b>STEP 3</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> Proceed with the payment</p>
                     </div>
-                    <div class="container d-flex align-items-center justify-content-center" style="margin-top: 30px;">
+                    <div class="container d-flex flex-column align-items-center justify-content-center" style="margin-top: 30px;">
+                        <p style="color: red;font-weight: bold;">NO APPLICATION WILL BE ENTERTAINED WITHOUT FEE PAYMENT</p><br/>
                         <a href="registration-fees"><button>PAYMENT DETAILS</button></a>
                     </div>
                 </div>
@@ -102,17 +103,9 @@
                             class="fa fa-facebook-square"></i></a>
                     <a href="https://www.instagram.com/icabb_2021/" target="_blank"><i class="fa fa-instagram"></i></a>
                     <a href="#" target="_blank"><i class="fa fa-twitter-square"></i></a>
-                    <a href="mailto:dhamasunny98@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
+                    <a href="mailto:reema.gabrani@jiit.ac.in" target="_blank"><i class="fa fa-envelope"></i></a>
                 </div>
                 <div class="credit">
-                    <a target="_blank"                      href="ICABB-2021-Brochure.pdf"
-style="
-                padding: 0 3px;
-                padding-bottom: 2px;
-                border-bottom: white 2px solid;
-                color: white;
-                text-decoration: none;
-              ">BROCHURE</a><br /><br />
                     <p>&copy ICABB JIIT 2021</p>
                     <div class="line"></div>
                     <p>
