--- a/guidelines.html
+++ b/guidelines.html
@@ -53,9 +53,27 @@
                     GUIDELINES
                 </h1>
                 <div class="head">
-                    <p>PLEASE READ.</p>
+                    <p></p>
                     <div class="line"></div>
                 </div>
+                <div class="container" style="margin-top: 20px;">
+                    <h2 class="text-center">GUIDELINES FOR PARTICIPANTS</h2>
+                    <div class="content-gray" style="display: block;">
+                        <ul class="ul-guidelines">
+                            <li>Kindly keep your microphone and camera switched off throughout the conference unless you
+                                are invited to talk or it is your turn to present.</li>
+                            <li>Please do not greet in the chat-box. It will be used for queries and questions.
+                            </li>
+                            <li>Kindly ensure that you send your presenting material well in advance to avoid any
+                                confusion</li>
+                            <li>While presenting make sure you have a good internet connectivity and no background
+                                disturbance</li>
+                            <li>Kindly enter the conference with your real username. Unusual names like (test, user1
+                                etc.) will not be allowed to enter.</li>
+                        </ul>
+                    </div>
+                </div>
+
                 <div class="container">
                     <h2 class="text-center">ABSTRACT</h2>
                     <div class="content-gray">
@@ -63,7 +81,7 @@
                             <li>The abstract should have a clear and concise title, written in Times New Roman font.
                             </li>
                             <li>Names of all the contributing authors should be listed in the sequence, they should
-                                appear in print, identifying the corresponding author with an apostrophe (*).</li>
+                                appear in print, identifying the corresponding author with an asterisk (*).</li>
                             <li>Affiliations, Addresses, Email IDs of all the contributing authors should be there.
                             </li>
                             <li>For the font size, please observe: Title (# 14), Names (# 12), Affiliations and
@@ -106,6 +124,7 @@
 
                 <div class="container" style="margin-top: 20px;">
                     <h2 class="text-center">PRESENTATION</h2>
+                    <p style="color: red; text-align: center;">Last date for Fees submission: 24th December 2020.</p>
                     <div class="content-gray">
                         <h2 class="text-center">ORAL PRESENTATION</h2>
                         <ul class="ul-guidelines">
@@ -149,30 +168,11 @@
                             <li>After all the presentations, there will be a live Q&A in remaining 10-15 minutes.
                                 Therefore, the presenters are required to stay till Q&A session.
                             </li>
-                            <li><b>Last date for Fees submission: 24th December 2020.</b>
-                            </li>
                             <li>For Oral and Short presentations, Registration is mandatory (which will be done after
                                 the abstract selection). However, for Conference Attendance, (without poster/oral
                                 presentation), registration is now active, so get yourself registered soon.
                                 In case of more than one contributing author for a paper/poster, each attending member
                                 requires to register individually for certificate.</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="container" style="margin-top: 20px;">
-                    <h2 class="text-center">ATTENDEE</h2>
-                    <div class="content-gray" style="display: block;">
-                        <ul class="ul-guidelines">
-                            <li>Kindly keep your microphone and camera switched off throughout the conference unless you
-                                are invited to talk or it is your turn to present.</li>
-                            <li>Please do not greet in the chat-box. It will be used for queries and questions.
-                            </li>
-                            <li>Kindly ensure that you send your presenting material well in advance to avoid any
-                                confusion</li>
-                            <li>While presenting make sure you have a good internet connectivity and no background
-                                disturbance</li>
-                            <li>Kindly enter the conference with your real username. Unusual names like (test, user1
-                                etc.) will not be allowed to enter.</li>
                         </ul>
                     </div>
                 </div>
@@ -193,26 +193,17 @@
                             class="fa fa-facebook-square"></i></a>
                     <a href="https://www.instagram.com/icabb_2021/" target="_blank"><i class="fa fa-instagram"></i></a>
                     <a href="#" target="_blank"><i class="fa fa-twitter-square"></i></a>
-                    <a href="mailto:dhamasunny98@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
+                    <a href="mailto:reema.gabrani@jiit.ac.in" target="_blank"><i class="fa fa-envelope"></i></a>
                 </div>
-                <div class="credit">
-                    <a target="_blank"                      href="ICABB-2021-Brochure.pdf"
- style="
-                padding: 0 3px;
-                padding-bottom: 2px;
-                border-bottom: white 2px solid;
-                color: white;
-                text-decoration: none;
-              ">BROCHURE</a><br /><br />
-                    <p>&copy ICABB JIIT 2021</p>
-                    <div class="line"></div>
-                    <p>
-                        DESIGNED AND DEVELOPED WITH
-                        <i class="fa fa-heart" style="color: rgb(238, 71, 79); margin: 0px 5px"></i>
-                        BY
-                        <a target="_blank" href="https://sunnydhama.com/">SUNNY DHAMA</a>
-                    </p>
-                </div>
+                <p>&copy ICABB JIIT 2021</p>
+                <div class="line"></div>
+                <p>
+                    DESIGNED AND DEVELOPED WITH
+                    <i class="fa fa-heart" style="color: rgb(238, 71, 79); margin: 0px 5px"></i>
+                    BY
+                    <a target="_blank" href="https://sunnydhama.com/">SUNNY DHAMA</a>
+                </p>
+            </div>
             </div>
         </footer>
     </content>
