--- a/registration.html
+++ b/registration.html
@@ -57,6 +57,11 @@
                     <div class="line"></div>
                 </div>
                 <div class="container">
+                    <div class="container d-flex flex-column align-items-center justify-content-center"
+                        style="margin-top: 30px;">
+                        <p style="color: red;font-weight: bold;">NO APPLICATION WILL BE ENTERTAINED WITHOUT FEE PAYMENT
+                        </p><br />
+                    </div>
                     <h2 class="text-center">PRESENTEE</h2>
                     <div class="content-gray" style="display: block;">
                         <p><b>STEP 1</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
@@ -64,10 +69,12 @@
                                     FORM</button></a></p>
                         <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
                             Email your abstract to jiiticabb2021@gmail.com</p>
-                        <p><b>STEP 3</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> You will receive an acceptance mail of abstract within two weeks with a
+                        <p><b>STEP 3</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> You will receive an
+                            acceptance mail of abstract within two weeks with a
                             specific
                             Abstract ID (ICABB ID)</p>
-                        <p><b>STEP 4</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> Proceed with the payment</p>
+                        <p><b>STEP 4</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> <a
+                                href="registration-fees"><button>PROCEED WITH PAYMENT</button></a></p>
                     </div>
                     <h2 class="text-center">ATTENDEE</h2>
                     <div class="content-gray" style="display: block;">
@@ -76,12 +83,10 @@
                                     FORM</button></a></p>
                         <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
                             You will receive an confirmation mail.</p>
-                        <p><b>STEP 3</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> Proceed with the payment</p>
+                        <p><b>STEP 3</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> <a
+                                href="registration-fees"><button>PROCEED WITH PAYMENT</button></a></p>
                     </div>
-                    <div class="container d-flex flex-column align-items-center justify-content-center" style="margin-top: 30px;">
-                        <p style="color: red;font-weight: bold;">NO APPLICATION WILL BE ENTERTAINED WITHOUT FEE PAYMENT</p><br/>
-                        <a href="registration-fees"><button>PAYMENT DETAILS</button></a>
-                    </div>
+
                 </div>
 
 
