--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </div>
       <div class="main">
         <div class="main-cent animated fadeInDown">
-          <div class="container" style="margin-bottom: 40px">
+          <div class="container">
             <p class="header-text" style="font-size: 1.5rem" href="#sponsors">
               JAYPEE INSTITUTE OF INFORMATION TECHNOLOGY
             </p>
@@ -584,13 +584,19 @@
         <img src="img/cloud.png" />
         <div class="footer">
           <div class="social">
-            <a href="https://www.facebook.com/icabb.jiit/" target="_blank"
+            <a
+              href="https://www.facebook.com/ICABB-2021-102130145072351"
+              target="_blank"
               ><i class="fa fa-facebook-square"></i
             ></a>
             <a href="https://www.instagram.com/icabb_2021/" target="_blank"
               ><i class="fa fa-instagram"></i
             ></a>
-            <a href="#" target="_blank"><i class="fa fa-twitter-square"></i></a>
+            <a
+              href="https://www.linkedin.com/mwlite/in/jiit-icabb-470b311bb"
+              target="_blank"
+              ><i class="fa fa-linkedin-square"></i
+            ></a>
             <a href="mailto:reema.gabrani@jiit.ac.in" target="_blank"
               ><i class="fa fa-envelope"></i
             ></a>
