--- a/registration-fees.html
+++ b/registration-fees.html
@@ -141,10 +141,10 @@
             <img src="img/cloud.png" />
             <div class="footer">
                 <div class="social">
-                    <a href="https://www.facebook.com/icabb.jiit/" target="_blank"><i
+                    <a href="https://www.facebook.com/ICABB-2021-102130145072351" target="_blank"><i
                             class="fa fa-facebook-square"></i></a>
                     <a href="https://www.instagram.com/icabb_2021/" target="_blank"><i class="fa fa-instagram"></i></a>
-                    <a href="#" target="_blank"><i class="fa fa-twitter-square"></i></a>
+                    <a href="https://www.linkedin.com/mwlite/in/jiit-icabb-470b311bb" target="_blank"><i class="fa fa-linkedin-square"></i></a>
                     <a href="mailto:reema.gabrani@jiit.ac.in" target="_blank"><i class="fa fa-envelope"></i></a>
                 </div>
                 <div class="credit">
