--- a/registration.html
+++ b/registration.html
@@ -82,7 +82,7 @@
                             <a target="_blank" href="https://forms.gle/Y9ypBfzfrcGXMSTf6"><button>ATTENDEE REGISTRATION
                                     FORM</button></a></p>
                         <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                            You will receive an confirmation mail.</p>
+                            You will receive a confirmation mail.</p>
                         <p><b>STEP 3</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> <a
                                 href="registration-fees"><button>PROCEED WITH PAYMENT</button></a></p>
                     </div>
@@ -104,10 +104,10 @@
             <img src="img/cloud.png" />
             <div class="footer">
                 <div class="social">
-                    <a href="https://www.facebook.com/icabb.jiit/" target="_blank"><i
+                    <a href="https://www.facebook.com/ICABB-2021-102130145072351" target="_blank"><i
                             class="fa fa-facebook-square"></i></a>
                     <a href="https://www.instagram.com/icabb_2021/" target="_blank"><i class="fa fa-instagram"></i></a>
-                    <a href="#" target="_blank"><i class="fa fa-twitter-square"></i></a>
+                    <a href="https://www.linkedin.com/mwlite/in/jiit-icabb-470b311bb" target="_blank"><i class="fa fa-linkedin-square"></i></a>
                     <a href="mailto:reema.gabrani@jiit.ac.in" target="_blank"><i class="fa fa-envelope"></i></a>
                 </div>
                 <div class="credit">
