--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                 <h1>Prof. Neena Capalash</h1>
                 <br />
                 <p>
-                  Professor, Department of Biotechnology, Punjab University,
+                  Professor, Department of Biotechnology, Panjab University,
                   Chandigarh.
                 </p>
               </div>
