--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
                             </tr>
                         </tbody>
                     </table>
-                    <img src="assets/about_image.jpg" class="img-fluid" alt="">
+                    <img src="assets/c11.jpeg" class="img-fluid" alt="">
 
                     <div class="content-gray" style="margin-top: 40px;">
                         <h6 class="text-center" style="color: #145dbb;">OUR ORGANIZING TEAM
