--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
               -webkit-text-fill-color: transparent;
             "
           >
-            Speakers
+            Keynote Speakers
           </h1>
           <div class="head">
             <p></p>
