--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                     </div>
                     <div class="carousel-item">
                       <img
-                        src="assets/c8.jepg"
+                        src="assets/c8.jpeg"
                         class="d-block w-100 car-img"
                         alt="..."
                       />
