content fixes - betav1

--- a/about.html
+++ b/about.html
@@ -133,13 +133,13 @@
                         <h3>TECHNICAL COMMITTEE</h3>
                         <p>Prof. Neeraj Wadhwa
                         </p>
-                        <p>Prof. S.K. Sundari
+                        <p>Prof. S. Krishna Sundari
                         </p>
-                        <p>Prof. S. Mohanty
+                        <p>Prof. Sujata Mohanty
                         </p>
-                        <p>Prof. S. Srivastava
+                        <p>Prof. Sudha Srivastava
                         </p>
-                        <p>Dr. C.K. Jain
+                        <p>Dr. Chakresh K. Jain
                         </p>
                         <p>Dr. Manisha Singh
                         </p>
@@ -187,6 +187,8 @@
                             </div>
                         </div>
                         <a href="registration"><button>REGISTER NOW</button></a>
+                        <a href="contact-us"><button>CONTACT US</button></a>
+
                     </div>
                 </div>
             </div>
