--- a/contact-us.html
+++ b/contact-us.html
@@ -50,40 +50,21 @@
               -webkit-background-clip: text;
               -webkit-text-fill-color: transparent;
             ">
-                    REGISTRATION
+                    CONTACT US
                 </h1>
                 <div class="head">
                     <p></p>
                     <div class="line"></div>
                 </div>
                 <div class="container">
-                    <div class="container d-flex flex-column align-items-center justify-content-center"
-                        style="margin-top: 30px;">
-                        <p style="color: red;font-weight: bold;">NO APPLICATION WILL BE ENTERTAINED WITHOUT FEE PAYMENT
-                        </p><br />
-                    </div>
-                    <h2 class="text-center">PRESENTEE</h2>
                     <div class="content-gray" style="display: block;">
-                        <p><b>STEP 1</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                            <a target="_blank" href="https://forms.gle/Y9ypBfzfrcGXMSTf6"><button>PRESENTEE REGISTRATION
-                                    FORM</button></a></p>
-                        <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> You will receive an
-                            acceptance mail of abstract within two weeks with a
-                            specific
-                            Abstract ID (ICABB ID)</p>
-                        <p><b>STEP 3</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> <a
-                                href="registration-fees"><button>PROCEED WITH PAYMENT</button></a></p>
+                        <p>Prof. Reema Gabrani - <a href="tel:919717152115">+91-9717152115</a></p>
+                        <p>Dr. Garima Mathur - <a href="tel:918447273535">+91-8447273535</a></p>
+                        <p>Ms. Vijeta Prakash - <a href="tel:918744963295">+91-8744963295</a></p>
+                        <p>Mr. Shubham Rajput - <a href="tel:917678336896">+91-7678336896</a></p>
+                       <a href="mailto:jiiticabb2021@gmail.com">Mail us at jiiticabb2021@gmail.com</a>
                     </div>
-                    <h2 class="text-center">ATTENDEE</h2>
-                    <div class="content-gray" style="display: block;">
-                        <p><b>STEP 1</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                            <a target="_blank" href="https://forms.gle/Y9ypBfzfrcGXMSTf6"><button>ATTENDEE REGISTRATION
-                                    FORM</button></a></p>
-                        <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                            You will receive a confirmation mail.</p>
-                        <p><b>STEP 3</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> <a
-                                href="registration-fees"><button>PROCEED WITH PAYMENT</button></a></p>
-                    </div>
+                   
 
                 </div>
 
@@ -92,7 +73,7 @@
 
             </div>
         </div>
-        <div class="title">REGISTRATION</div>
+        <div class="title">CONTACT</div>
         <div class="shape shape-5 rellax" data-rellax-speed="5" data-rellax-percentage="0.5">
             <img src="img/blue/blueShapeSide2.png" />
         </div>
