--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </p>
             <p style="margin-bottom: 0; font-size: 1.4rem">ON</p>
             <p style="margin-bottom: 0; font-size: 1.4rem">
-              ADVANCES IN BIOSCIENCES AND BIOTECHNOLOGY
+              ADVANCES IN BIOSCIENCES AND BIOTECHNOLOGY - (ICABB)
             </p>
             <p style="margin-bottom: 0; font-size: 1.4rem">2021</p>
           </div>
@@ -131,7 +131,7 @@
             About
           </h1>
           <div class="head">
-            <p>BIGGEST 2021 DIGITAL CONFERENCE.</p>
+            <p>ICABB 2021.</p>
             <div class="line"></div>
           </div>
           <div class="text">
@@ -604,7 +604,7 @@
           <div class="credit">
             <a
               target="_blank"
-              href="ICABB-2021-Brochure.pdf"
+              href="contact-us"
               style="
                 padding: 0 3px;
                 padding-bottom: 2px;
@@ -612,7 +612,7 @@
                 color: white;
                 text-decoration: none;
               "
-              >BROCHURE</a
+              >CONTACT US</a
             ><br /><br />
             <p>&copy ICABB JIIT 2021</p>
             <div class="line"></div>
