Removed rellax from past events

--- a/index.html
+++ b/index.html
@@ -404,9 +404,7 @@
       <!-- PAST EVENTS -->
       <div class="main-wrap">
         <div
-          class="content rellax"
-          data-rellax-speed="-4"
-          data-rellax-percentage="0.5"
+          class="content"
         >
           <h1
             style="
@@ -499,9 +497,8 @@
         </div>
         <div class="title">PAST EVENTS</div>
         <div
-          class="shape shape-4 rellax"
-          data-rellax-speed="5"
-          data-rellax-percentage="0.5"
+          class="shape shape-4"
+         
         >
           <img src="img/blue/blueShapeSide.png" />
         </div>
