added about and edit fees

--- a/about.html
+++ b/about.html
@@ -61,13 +61,33 @@
                 <div class="container">
                     <h2 class="text-center">GET TO KNOW ABOUT ICABB 2021 EVENT</h2>
                     <div class="content-gray">
+
+                        <p style="margin-top: 20px;">Established in the year 2001, JIIT Noida has been declared as a
+                            ‘Deemed to be University’ under Section 3 of UGC Act 1956 in the year 2004. JIIT Noida is
+                            one of the top leading engineering institutes in Delhi-NCR, continually in the top 100
+                            rankings in the leading surveys including the NIRF rankings and NAAC Rankings. Its campus is
+                            primed with Smart buildings with well-equipped modern laboratories and information centre
+                            with a large array of books and E-Resources which provide a pleasing and stimulating
+                            atmosphere. The education system of JIIT focuses on making professionals with an assorted
+                            skill set by having an environment that promotes innovation, entrepreneurship, creativity,
+                            and management with special attention to development of communication skills and leadership
+                            qualities for their scholars.</p>
+                        <p style="margin-top: 20px;">The Department of Biotechnology at JIIT Noida since 2002 has
+                            remained committed to providing a research – informed teaching and learning experience in a
+                            vibrant and constructive R&D environment. Students are exposed to emerging fields including
+                            structural biology, drug discovery, patenting and IPR, genetic engineering,
+                            nano-biotechnology and many others. With state-of-the-art laboratory and sponsored research
+                            projects from different funding agencies (DBT, DST, ICMR, AICTE and AYUSH) providing a
+                            positive platform for aspiring students and researchers. The department has a highly
+                            sophisticated and experienced faculty with valuable research exposure in the academics and
+                            industry at a national as well international level.</p>
                         <p>The International E-Conference on Advances in Biosciences and Biotechnology (ICABB-2021) aims
                             to unite multi- disciplinary fields of biology, biosciences, and medical biotechnology on a
                             single platform. It will provide a platform to bring academicians, researchers, scholars,
                             technocrats from academia and industry to share their ideas, knowledge, and experience. This
                             is the 6th International conference being organized by the Department of Biotechnology.</p>
                         <p style="margin-top: 20px;">This year, the theme of the proposed conference is ‘Recent trends
-                            in Biosciences and Biomedical Research’. This conference aims to provide an opportunity to
+                            in Biosciencs and Biomedical Research’. This conference aims to provide an opportunity to
                             participants, delegates and researchers along with other stakeholders to share scientific
                             advancements in various disciplines of biosciences and biomedical research and to get
                             acquainted with novel or alternative strategies to seek an answer to various global
@@ -206,7 +226,8 @@
                     <a href="https://www.facebook.com/ICABB-2021-102130145072351" target="_blank"><i
                             class="fa fa-facebook-square"></i></a>
                     <a href="https://www.instagram.com/icabb_2021/" target="_blank"><i class="fa fa-instagram"></i></a>
-                    <a href="https://www.linkedin.com/mwlite/in/jiit-icabb-470b311bb" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+                    <a href="https://www.linkedin.com/mwlite/in/jiit-icabb-470b311bb" target="_blank"><i
+                            class="fa fa-linkedin-square"></i></a>
                     <a href="mailto:reema.gabrani@jiit.ac.in" target="_blank"><i class="fa fa-envelope"></i></a>
                 </div>
                 <div class="credit">
