--- a/registration-fees.html
+++ b/registration-fees.html
@@ -58,21 +58,32 @@
                 </div>
                 <div class="container">
                     <div class="container">
-                        <table class="table">
+                        <div class="table-responsive">
+                            <p style=" text-align: center; color: #145dbb;">Scroll Left for more rows</p>
+                        <table class="table table-sm">
                             <thead class="thead-light">
                                 <tr>
-                                    <th scope="col"></th>
+                                    <th scope="col">Category</th>
+                                    <th scope="col">Conference</th>
                                     <th scope="col">INDIAN PARTICIPATION (INR)</th>
                                     <th scope="col">INTERNATIONAL PARTICIPATION (USD)</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
+                                    <th scope="row">Presenter</th>
                                     <th scope="row">Students/Research Scholars</th>
                                     <td style="text-align: center;">₹ 1000</td>
                                     <td style="text-align: center;">$ 100</td>
                                 </tr>
                                 <tr>
+                                    <th scope="row">Attendee</th>
+                                    <th scope="row">Students/Research Scholars</th>
+                                    <td style="text-align: center;">₹ 200</td>
+                                    <td style="text-align: center;">$ 50</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row" rowspan="2">Presenter/Attendee</th>
                                     <th scope="row">Faculty/Scientists from Academia</th>
                                     <td style="text-align: center;">₹ 2000</td>
                                     <td style="text-align: center;">$ 200</td>
@@ -82,13 +93,10 @@
                                     <td style="text-align: center;">₹ 5000</td>
                                     <td style="text-align: center;">$ 300</td>
                                 </tr>
-                                <tr>
-                                    <th scope="row">Attendee Only</th>
-                                    <td style="text-align: center;">₹ 200</td>
-                                    <td style="text-align: center;">$ 50</td>
-                                </tr>
                             </tbody>
                         </table>
+                    </div>
+
                     </div>
                     <div class="container">
                         <h2 class="text-center">PAYMENT METHOD</h2>
