--- a/registration.html
+++ b/registration.html
@@ -65,7 +65,7 @@
                     <h2 class="text-center">PRESENTEE</h2>
                     <div class="content-gray" style="display: block;">
                         <p><b>STEP 1</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                            <a target="_blank" href="https://forms.gle/Y9ypBfzfrcGXMSTf6"><button>PRESENTEE REGISTRATION
+                            <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSe8Jz1V4gBq78nThZOBOW9GwW_Foh7aPhCEXTHVUMyzHrI5pw/viewform"><button>PRESENTEE REGISTRATION
                                     FORM</button></a></p>
                         <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i> You will receive an
                             acceptance mail of abstract within two weeks with a
@@ -77,7 +77,7 @@
                     <h2 class="text-center">ATTENDEE</h2>
                     <div class="content-gray" style="display: block;">
                         <p><b>STEP 1</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                            <a target="_blank" href="https://forms.gle/Y9ypBfzfrcGXMSTf6"><button>ATTENDEE REGISTRATION
+                            <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSe8Jz1V4gBq78nThZOBOW9GwW_Foh7aPhCEXTHVUMyzHrI5pw/viewform"><button>ATTENDEE REGISTRATION
                                     FORM</button></a></p>
                         <p><b>STEP 2</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
                             You will receive a confirmation mail.</p>
